--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="lightblue">#43Bee6</color>
+    <color name="shadowheader"> #d1d2d4</color>
+    <color name="separator">#939597</color>
+    <color name="fonttitle">#404041</color>
+    <color name="fontdesc">#808284</color>
+    <color name="Background">#ffffff</color>
+    <color name="Backgroundinvitefriend">#f1f1f2</color>
 </resources>
